@@ -1,3 +1,8 @@
+September 12, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * libpcsxcore/cdriso.c: Disregard the synchronization information and header
+   data when playing CDDA music.
+
 September 8, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * win32/gui/ConfigurePlugins.c: Select a real BIOS instead of the Internal
